--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-pdf/renderer": "^4.1.6",
     "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.20.2",
     "class-variance-authority": "^0.7.0",
