--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "antd": "^5.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
